<?xml version="1.0"?>
<package>
  <name>msl_bbb</name>
  <version>0.0.1</version>
  <description>The msl_bbb package includes the executable that is running on the beagle board black of the Carpe Noctem Cassel fieldplayers.</description>

  <maintainer email="lukas.will@gmail.com">Lukas Will</maintainer>

  <license>MIT</license>

  <author email="lukas.will@gmail.com">Lukas Will</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>event_handling</build_depend>
  <build_depend>msl_actuator_msgs</build_depend>
  <build_depend>msl_black_lib</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>system_config</build_depend>
  <build_depend>process_manager</build_depend>
  <build_depend>cnc_geometry</build_depend>
  <build_depend>can_connection_bbb</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>event_handling</run_depend>
  <run_depend>msl_actuator_msgs</run_depend>
  <run_depend>msl_black_lib</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>system_config</run_depend>
  <run_depend>process_manager</run_depend>
  <run_depend>can_connection_bbb</run_depend>
</package>
