<?xml version="1.0"?>
<package>
  <name>msl_beagle_board_black_udp</name>
  <version>0.0.0</version>
  <description>The msl_beagle_board_black package</description>

  <maintainer email="luk@todo.todo">luk</maintainer>

  <license>MIT</license>

  <author email="lukas.will@gmail.com">Lukas Will</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>msl_actuator_msgs</build_depend>
  <build_depend>msl_black_lib</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>system_config</build_depend>
  <build_depend>process_manager</build_depend>
  <build_depend>cnc_geometry</build_depend>
  <build_depend>can_connection_bbb</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>msl_actuator_msgs</run_depend>
  <run_depend>msl_black_lib</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>system_config</run_depend>
  <run_depend>process_manager</run_depend>
  <run_depend>can_connection_bbb</run_depend>

  <export>

  </export>
</package>
